# advent-of-code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
2021/: README.md
2021/src/: main.py
2021/src/day_01/: test_solution.py
2021/src/day_02/: puzzle.md  solution.py  test_solution.py
2021/src/day_03/: test_solution.py
2021/src/day_04/: puzzle.md  test_solution.py
2021/src/day_05/: puzzle.md  solution.py  test_solution.py
2021/src/day_06/: solution.py  test_solution.py
2021/src/day_07/: puzzle.md  test_solution.py
2021/src/day_08/: test_solution.py
2021/src/day_09/: solution.py  test_solution.py
2021/src/day_10/: solution.py  test_solution.py
2021/src/day_11/: puzzle.md  solution.py  test_solution.py
2021/src/day_12/: test_solution.py
2021/src/day_13/: test_solution.py
2021/src/day_14/: puzzle.md  solution.py  test_solution.py
2021/src/day_15/: puzzle.md  solution.py  test_solution.py
2021/src/day_16/: puzzle.md  solution.py  test_solution.py
2021/src/day_17/: test_solution.py
2021/src/day_18/: test_solution.py
2021/src/day_19/: solution.py  test_solution.py
2021/src/day_20/: solution.py  test_solution.py
2021/src/day_21/: test_solution.py
2021/src/day_22/: puzzle.md  test_solution.py
2021/src/day_23/: test_solution.py
2021/src/day_24/: puzzle.md  solution.py  test_solution.py
2021/src/utils/: common.py
2022/: CMakeLists.txt  README.md
2022/src/: main.cpp
2022/src/day_01/: solution_test.cpp
2022/src/day_02/: problem.md  solution.hpp  solution_test.cpp
2022/src/day_03/: solution.hpp  solution_test.cpp
2022/src/day_04/: solution.cpp  solution_test.cpp
2022/src/day_05/: solution.hpp
2022/src/day_06/: solution.hpp
2022/src/day_07/: solution.cpp  solution.hpp
2022/src/day_08/: solution.cpp  solution.hpp  solution_test.cpp
2022/src/utils/: FileUtils.hpp  ISolution.hpp
2023/: README.md  go.mod  go.sum
2023/cmd/: cmd.go
2023/internal/day_01/: day_01.go  day_01_test.go  problem.md
2023/internal/day_02/: day_02.go  day_02_test.go  problem.md
2023/internal/day_03/: day_03.go  day_03_test.go  problem.md
2024/: deno.json
2024/src/: common.ts  day01.test.ts  day01.ts  day02.test.ts  day02.ts  day03.test.ts  day03.ts  day04.test.ts  day04.ts  day05.test.ts  day05.ts  day06.test.ts  day06.ts  day07.test.ts  day07.ts  day08.test.ts  day08.ts  day09.test.ts  day09.ts  day10.test.ts  day10.ts  day11.test.ts  day11.ts  day12.test.ts  day12.ts  day13.test.ts  day13.ts  index.ts  main.ts
src/: common.py  main.cpp  test_runner.cpp
src/utils/: FileUtils.cpp  ISolution.hpp  StringUtils.cpp  StringUtils.hpp  base_solution.hpp
src/year_2021/: main.py
src/year_2022/: main.cpp  test_runner.cpp
(+191 files in other folders)
